--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,24 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "hash_set": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "variant": "cpp",
+        "xstring": "cpp",
+        "ctime": "cpp",
+        "ios": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stack": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocinfo": "cpp",
+        "xlocnum": "cpp",
+        "xmemory": "cpp",
+        "xstddef": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
     }
 }
